target/debug/build/crossbeam-utils-25662aa5703d51e2/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/1159e78c4747b02ef996e55082b704c09b970588/library/core/src/sync/atomic.rs:3718:1
 ::: /rustc/1159e78c4747b02ef996e55082b704c09b970588/library/core/src/sync/atomic.rs:3735:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
